[project]
name = "rust-cli-poc"
version = "0.1.0"
description = ""
authors = [
    {name = "Disco",email = "disco@biscuit.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "behave (>=1.3.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
